💄 UI : fix selection box misalignment
close #150

--- a/src/index.less
+++ b/src/index.less
@@ -20,14 +20,12 @@
   .@{ant-prefix}-pagination {
     padding: 0 24px;
   }
-  .@{ant-prefix}-table-row {
-    padding-left: 8px;
+
+  .@{ant-prefix}-table-row .@{ant-prefix}-table-cell:first-child {
+    padding-left: 24px;
   }
+
   .@{ant-prefix}-table-content tr:first-child > th:first-child {
     padding-left: 24px;
   }
-}
-
-th.ant-table-selection-column {
-  padding: 0 !important;
 }
